# FML_AutonomousCar

./: .gitignore  .gitmodules  BicycleModelCalculator.py  I2C_Serial_Update.py  I2C_ThrottleCalibration.py  Makefile  MotorCommandsTest.py  README.md  TraxxasManualCMD.py  TraxxasServoCMD.py  acados_ocp.json  dependencies.sh  lab_map.pgm  lab_map.yaml  waypoints.json
Testing/: MPCTest1mps.csv  PPTest1mps.csv  StanleyTest1mps.csv  YoulaTest1mps.csv
Testing/mpctest1/: metadata.yaml
Testing/pptest1/: metadata.yaml
Testing/stanleytest2/: metadata.yaml
Testing/youlatest1/: metadata.yaml
c_generated_code/: CMakeLists.txt  Makefile  acados_sim_solver_Dynamic_Bicycle.c  acados_sim_solver_Dynamic_Bicycle.h  acados_solver.pxd  acados_solver_Dynamic_Bicycle.c  acados_solver_Dynamic_Bicycle.h  main_Dynamic_Bicycle.c  main_sim_Dynamic_Bicycle.c
c_generated_code/Dynamic_Bicycle_constraints/: Dynamic_Bicycle_constr_h_fun.c  Dynamic_Bicycle_constr_h_fun_jac_uxt_zt.c  Dynamic_Bicycle_constraints.h
c_generated_code/Dynamic_Bicycle_cost/: Dynamic_Bicycle_cost.h
c_generated_code/Dynamic_Bicycle_model/: Dynamic_Bicycle_expl_ode_fun.c  Dynamic_Bicycle_expl_vde_adj.c  Dynamic_Bicycle_expl_vde_forw.c  Dynamic_Bicycle_model.h
path_planning/: README.md
path_planning/latex/: paper.tex
scripts/: BicycleModelCalculator.py  README.md  Results.py  TraxxasManualCMD.py
src/: README.md
src/ros2_as5600_wheelspeed_node/: CMakeLists.txt  README.md  package.xml
src/ros2_as5600_wheelspeed_node/include/as5600driver/: as5600driver.h  as5600sensor.h
src/ros2_as5600_wheelspeed_node/launch/: as5600driver_launch.py
src/ros2_as5600_wheelspeed_node/params/: as5600.yaml
src/ros2_as5600_wheelspeed_node/src/: as5600driver.cpp  as5600sensor.cpp
(+130 files in other folders)
